[tool.poetry]
name = "tap"
version = "0.1.0"
description = ""
authors = ["Punit Arani <punitsai36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
opencv-python = "^4.7.0.72"
pandas = "^2.0.2"
pillow = "^9.5.0"
mediapipe = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
